// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MagellanAI's purchase destination action: all fields 1`] = `
Object {
  "currency": "UZS",
  "discountCode": "PDOIxm6D7Wge",
  "id": "PDOIxm6D7Wge",
  "isNewCustomer": true,
  "lineItems": Array [
    Object {
      "productId": "PDOIxm6D7Wge",
      "productName": "PDOIxm6D7Wge",
      "productType": "PDOIxm6D7Wge",
      "productVendor": "PDOIxm6D7Wge",
      "quantity": -5726199338762.24,
      "value": -5726199338762.24,
      "variantId": "PDOIxm6D7Wge",
      "variantName": "PDOIxm6D7Wge",
    },
  ],
  "quantity": -5726199338762.24,
  "token": "PDOIxm6D7Wge",
  "value": -5726199338762.24,
}
`;

exports[`Testing snapshot for MagellanAI's purchase destination action: required fields 1`] = `
Object {
  "currency": "UZS",
  "id": "PDOIxm6D7Wge",
  "token": "PDOIxm6D7Wge",
  "value": -5726199338762.24,
}
`;
